# hex-chess-MCTS

./: .gitignore  CMakeLists.txt  LICENSE
inc/: BoardState.h  MCTreeSearch.h
src/: MCTreeSearch.cpp  main.cpp
